--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Click Me</title>
+  <title>- HY - </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -11,7 +11,7 @@
 <!-- partial:index.partial.html -->
 <!-- Inspiration: https://dribbble.com/shots/4397812-Click-Me -->
 
-<a href="#" class="cta">
+<a href="https://www.facebook.com/hoanyen9903" target = "blank" class="cta">
   <span>Click me</span>
   <svg width="13px" height="10px" viewBox="0 0 13 10">
     <path d="M1,5 L11,5"></path>
